<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <RadioGroup
        android:id="@+id/theme_radio_group"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/theme_dark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/dark_theme" />

        <RadioButton
            android:id="@+id/theme_light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/light_theme" />

    </RadioGroup>

    <Button
        android:id="@+id/apply"
        android:layout_below="@id/theme_radio_group"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:text="@string/apply"
        android:textColor="@color/accent" />

    <Button
        android:id="@+id/cancel"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/theme_radio_group"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:text="@string/cancel"
        android:textColor="@color/accent" />

</RelativeLayout>