<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    android:orientation="vertical"
    tools:context="com.omegashin.homeview.WidgetStyle">

    <CheckBox
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:checked="true"
        android:id="@+id/box_clock"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/show_clock" />

    <CheckBox
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:checked="true"
        android:id="@+id/box_apps"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/show_apps" />

    <CheckBox
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:checked="true"
        android:id="@+id/box_reminders"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/show_reminders" />

    <Button
        android:id="@+id/save"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:onClick="save"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:text="@string/apply"
        android:layout_gravity="end"
        android:textColor="@color/accent" />

</LinearLayout>
