<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical">

    <EditText
        android:id="@+id/chip_label"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/primary"
        android:fontFamily="sans-serif-condensed"
        android:hint="@string/chip_label_hint"
        android:maxLength="24"
        android:padding="16dp"
        android:textColor="@color/white"
        android:textColorHint="@color/grey_200"
        android:textCursorDrawable="@color/white" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1.2dp"
        android:background="@color/primary_dark"
        android:contentDescription="@string/content_widget_divider" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/chip_icon_heading"
        android:textColor="@color/grey_500"
        android:textSize="18sp" />

    <ImageView
        android:id="@+id/reminder_icon"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:contentDescription="@string/content_app_icon"
        android:foreground="?android:attr/selectableItemBackground"
        android:onClick="OpenIconReturn"
        android:padding="12dp"
        android:scaleType="fitCenter"
        android:tint="@color/accent"
        app:srcCompat="@drawable/app_android" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/add"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_margin="4dp"
            android:text="@string/add"
            android:textColor="@color/accent" />

        <Button
            android:id="@+id/cancel"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_toStartOf="@id/add"
            android:layout_toLeftOf="@id/add"
            android:text="@string/cancel"
            android:textColor="@color/accent" />

        <Button
            android:id="@+id/complete"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_margin="4dp"
            android:text="@string/complete"
            android:textColor="@color/accent"
            android:visibility="gone" />

    </RelativeLayout>

</LinearLayout>
