<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_home_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.omegashin.homeview.DashDock"
    tools:showIn="@layout/activity_home_view">

    <com.google.android.gms.ads.NativeExpressAdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        ads:adSize="360x100"
        ads:adUnitId="ca-app-pub-3940256099942544/2793859312" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/adView"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_margin="16dp"
            android:contentDescription="@string/content_app_icon"
            android:text="@string/help_image"
            android:tint="@color/grey_500"
            app:srcCompat="@drawable/app_widgets" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center"
            android:text="@string/help_text"
            android:textColor="@color/grey_500"
            android:textSize="24sp" />

        <Button
            android:id="@+id/update"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:onClick="OpenWidgetSettings"
            android:text="@string/settings"
            android:textColor="@color/white" />

        <Button
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="sans-serif-condensed"
            android:onClick="OpenDevInfo"
            android:text="@string/developer_info"
            android:textColor="@color/white" />

    </LinearLayout>

</RelativeLayout>
