<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="4dp"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:layout_margin="4dp"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardCornerRadius="3dp"
        app:cardPreventCornerOverlap="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/cover"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:contentDescription="@string/content_dev_cover"
                android:scaleType="centerCrop"
                android:src="@drawable/cover" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/round_logo"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="80dp"
                android:src="@drawable/portrait"
                app:civ_border_color="@color/logoRing"
                app:civ_border_width="4dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_below="@id/cover" />

            <LinearLayout
                android:id="@+id/dev_desc_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/cover"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="40dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dev_name"
                    android:textColor="@color/primary_text"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dev_desc"
                    android:textColor="@color/primary_text"
                    android:textSize="14sp"
                    android:textStyle="italic" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/dev_desc_layout"
                android:layout_gravity="bottom"
                android:layout_margin="4dp"
                android:gravity="center">

                <Button
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:text="@string/fb_follow"
                    android:onClick="openFacebook"
                    android:textColor="@color/indigo_A200"/>

                <Button
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:onClick="openGooglePlus"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:text="@string/gplus_follow"
                    android:textColor="@color/red_500" />

            </LinearLayout>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardCornerRadius="3dp"
        app:cardPreventCornerOverlap="true">

    <LinearLayout
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:contentDescription="@string/content_app_logo"
            android:scaleType="fitCenter"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_full_name"
            android:textColor="@color/primary_text"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_version"
            android:textColor="@color/primary_text"
            android:textSize="14sp"
            android:textStyle="italic" />

    </LinearLayout>

    </android.support.v7.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/thanks"
        android:layout_gravity="center"
        android:padding="4dp"
        android:textColor="@color/primary_text"
        android:textSize="16sp"
        android:textStyle="italic" />

</LinearLayout>