<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.omegashin.homeview.Activity_AddAppIcon">

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/done_app_icon_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:tint="@color/white"
        app:srcCompat="@drawable/ic_done" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardCornerRadius="2dp"
        app:cardElevation="3dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:orientation="vertical"
            android:padding="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                android:id="@+id/label_icon"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textStyle="bold"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center"
                android:text="@string/label_app_icon"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/package_icon"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:foreground="?android:attr/selectableItemBackground"
                android:contentDescription="@string/content_app_icon"
                android:onClick="OpenIconReturn"
                android:padding="12dp"
                android:scaleType="fitCenter"
                android:tint="@color/blue_grey_700"
                app:srcCompat="@drawable/app_android" />

            </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/label_app"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center"
                android:text="@string/label_app_to_open"
                android:textSize="18sp" />

            <LinearLayout
                android:id="@+id/app_info"
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:orientation="vertical"
                android:paddingEnd="16dp"
                android:paddingStart="16dp">

                <TextView
                    android:id="@+id/package_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/label_app_name"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                    android:textColor="@color/grey_800"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/package_uri"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:fontFamily="sans-serif-condensed"
                    android:maxLines="3"
                    android:text="@string/label_app_uri"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                    android:textColor="@color/grey_600"
                    android:textSize="14sp" />

            </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/package_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:fontFamily="sans-serif-condensed"
                android:onClick="OpenPackageList"
                android:text="@string/choose_app"
                android:textColor="@color/white" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

</android.support.design.widget.CoordinatorLayout>
