<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.omegashin.homeview.Activity_WidgetSettings">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </android.support.design.widget.AppBarLayout>

        <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:cardview="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foreground="?android:attr/selectableItemBackground"
            cardview:cardCornerRadius="2dp"
            cardview:cardElevation="3dp"
            cardview:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="88dp"
                android:layout_marginRight="88dp"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="start|center_vertical"
                    android:fontFamily="sans-serif-condensed"
                    android:gravity="center"
                    android:text="@string/label_current_tz"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                    android:textColor="@color/grey_800"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/current_tz"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="start|center_vertical"
                    android:fontFamily="sans-serif-condensed"
                    android:gravity="center"
                    android:text="@string/default_label"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                    android:textColor="@color/grey_600"
                    android:textSize="18sp" />

            </LinearLayout>

            <Button
                android:id="@+id/change_timezone_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|bottom"
                android:layout_margin="4dp"
                android:fontFamily="sans-serif-condensed"
                android:onClick="OpenTZList"
                android:text="@string/label_change"
                android:textColor="@color/white" />

        </android.support.v7.widget.CardView>

        <Button
            android:id="@+id/change_shortcuts_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:onClick="OpenAppIconsList"
            android:text="@string/label_change_shortcuts"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/change_theme_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:onClick="OpenThemeDialog"
            android:text="@string/label_change_theme"
            android:textColor="@color/white" />

    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
